# TaskCollabAPI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
prisma/: schema.prisma
src/: main.py
taskcollabapi/: app.py  router.py
taskcollabapi/core/: env.py  security.py
taskcollabapi/core/db/: db.py  redis.py
taskcollabapi/errors/: base.py  handler.py
taskcollabapi/modules/auth/: auth_controller.py  dependencies.py  errors.py  repository.py  schema.py  service.py
taskcollabapi/modules/users/: repository.py  schema.py  users_controller.py
taskcollabapi/schemas/: responses.py
tests/: test_security.py
